hexMode and an additional newline mode

--- a/app/src/main/res/menu/menu_terminal.xml
+++ b/app/src/main/res/menu/menu_terminal.xml
@@ -9,4 +9,7 @@
     <item
         android:id="@+id/newline"
         android:title="Newline Mode" />
+    <item
+        android:id="@+id/charMode"
+        android:title="Character Mode" />
 </menu>
