add tcp server option
If activated, a tcp server opens on the selected port,
waiting for connection to forward ble serial device.
Strictmode can be reworked or ignored because,
if connected no other tasks are todo.

--- a/app/src/main/res/menu/menu_terminal.xml
+++ b/app/src/main/res/menu/menu_terminal.xml
@@ -15,4 +15,10 @@
         android:title="HEX Mode"
         android:checkable="true"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/tcpserver"
+        android:checkable="true"
+        android:checked="false"
+        android:title="Server"
+        app:showAsAction="never" />
 </menu>
